--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Резюме Голосуев</title>
 </head>
 <body>
-<div id="root"></div>
+<div id="root"><!--app-html--></div>
 <script type="module" src="/src/entry-client.tsx"></script>
 </body>
 </html>
