--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="Данил Голосуев Full-stack разработчик резюме"/>
+    <meta name="keywords" content="Данил Голосуев, JS, Java, Web, Full-stack, Frontend, Backend"/>
     <title>Резюме Голосуев</title>
     <style>*{font-family: sans-serif;}</style>
 </head>
